# Neural-Networks-From-Scratch-MNIST-C-plusplus

./: CMakeLists.txt  README.md  build.sh  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
src/: eval.cpp  eval.hpp  mnist.cpp  mnist_data_reader.cpp  mnist_data_reader.hpp  network.cpp  network.hpp  test_image_reader.cpp  test_label_reader.cpp
src/Layers/: activations.cpp  activations.hpp  fullyconnected.cpp  fullyconnected.hpp
src/Optimization/: loss.cpp  loss.hpp  sgd.cpp  sgd.hpp
